# cpu-Tracker-notify-by-Email

./: .clang-format  .gitignore  CMakeLists.txt  DeviceManger.cpp  DeviceManger.hpp  README.md  client.cpp  client.hpp  main.cpp
source/connection/: Client.cpp  Client.h  ConnectionManager.cpp  ConnectionManager.h
source/connection/socket/: Socket.cpp  Socket.h
source/connection/socket/Linux/: SocketImpl.h
source/connection/socket/Windows/: SocketImpl.h
source/device/: DeviceManger.cpp  DeviceManger.h
source/entry/: main.cpp
